--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 systemd (229-2ubuntu1) UNRELEASED; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
+    - Hack to support system-image read-only /etc, and modify files in
+      /etc/writable/ instead.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
 
