--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 systemd (228-1ubuntu1) UNRELEASED; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
+    - Hack to support system-image read-only /etc, and modify files in
+      /etc/writable/ instead.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
