--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - Simpler udev maintainer scripts (all platforms must support udev, no
       debconf).
+    - initramfs init-bottom: If LVM is installed, settle udev,
+      otherwise we get missing LV symlinks. Workaround for LP #1185394.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
