--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ systemd (228-2ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - Simpler udev maintainer scripts (all platforms must support udev, no
       debconf).
+    - initramfs init-bottom: If LVM is installed, settle udev,
+      otherwise we get missing LV symlinks. Workaround for LP #1185394.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
