--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ systemd (229-1ubuntu1) UNRELEASED; urgency=medium
     - Hack to support system-image read-only /etc, and modify files in
       /etc/writable/ instead.
 
+    Upgrade fixes, keep until 16.04 LTS release:
+    - systemd Conflicts/Replaces/Provides systemd-services.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
 
 systemd (229-1) unstable; urgency=medium
