--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,9 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       libmicrohttpd-dev. This is blocked by the MIR (LP #1488341).
     - Build using libseccomp on all architectures (See Debian #800818)
 
+    Upgrade fixes, keep until 16.04 LTS release:
+    - systemd Conflicts/Replaces/Provides systemd-services.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
 systemd (227-3) UNRELEASED; urgency=medium
