--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ systemd (228-2ubuntu1) UNRELEASED; urgency=medium
       libmicrohttpd-dev. This is blocked by the MIR (LP #1488341).
     - Build using libseccomp on powerpc and ppc64el (See Debian #800818).
 
+    Upgrade fixes, keep until 16.04 LTS release:
+    - systemd Conflicts/Replaces/Provides systemd-services.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
 systemd (228-3) UNRELEASED; urgency=medium
