--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
       libpam-cgfs. (LP: #1346734)
     - Build using libseccomp on powerpc and ppc64el (See Debian #800818).
 
+    Upgrade fixes, keep until 16.04 LTS release:
+    - systemd Conflicts/Replaces/Provides systemd-services.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
 systemd (228-5) unstable; urgency=medium
