--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - Build using libseccomp on powerpc and ppc64el (See Debian #800818).
 
+    Upgrade fixes, keep until 16.04 LTS release:
+    - systemd Conflicts/Replaces/Provides systemd-services.
+
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
 systemd (228-7) UNRELEASED; urgency=medium
