--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
 
     Upgrade fixes, keep until 16.04 LTS release:
     - systemd Conflicts/Replaces/Provides systemd-services.
+    - Remove obsolete systemd-logind upstart job.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
