--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ systemd (229-3ubuntu1) UNRELEASED; urgency=medium
       upstart's Restart() always reexec'ing /sbin/init on Restart(), even if
       that changes to point to systemd during the upgrade. This avoids running
       systemd during a dist-upgrade. (LP: #1430479)
+    - Provide shutdown fallback for upstart. (LP: #1370329)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
 
