--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
       upstart's Restart() always reexec'ing /sbin/init on Restart(), even if
       that changes to point to systemd during the upgrade. This avoids running
       systemd during a dist-upgrade. (LP: #1430479)
+    - Provide shutdown fallback for upstart. (LP: #1370329)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
