--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
       /etc/writable/ instead.
     - Simpler udev maintainer scripts (all platforms must support udev, no
       debconf).
+    - Provide shutdown fallback for upstart. (LP: #1370329)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
