--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ systemd (228-2ubuntu1) UNRELEASED; urgency=medium
       dependencies to "lvm2" which is handled with udev rules in Ubuntu.
     - Add debian/udev.lvm2.service to avoid running the dummy lvm2 init
       script.
+    - Provide shutdown fallback for upstart. (LP: #1370329)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
