--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,10 @@ systemd (228-2ubuntu1) UNRELEASED; urgency=medium
     - Add debian/udev.lvm2.service to avoid running the dummy lvm2 init
       script.
     - Provide shutdown fallback for upstart. (LP: #1370329)
+    - debian/extra/ifup@.service: Additionally run for "auto" class. We don't
+      really support "allow-hotplug" in Ubuntu at the moment, so we need to
+      deal with "auto" devices appearing after "/etc/init.d/networking start"
+      already ran. (LP: #1374521)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
