--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ systemd (228-1ubuntu1) UNRELEASED; urgency=medium
     - Don't attempt to migrate pid 1 itself when migrating cgroups for started
       units; works around some not yet understood cgproxy/systemd interaction.
       This particularly unbreaks cgproxy in LXC. (LP: #1491557)
+    - Lower Breaks: to plymouth version which has the udev inotify fix in
+      Ubuntu.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
