--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
     - Simpler udev maintainer scripts (all platforms must support udev, no
       debconf).
     - Provide shutdown fallback for upstart. (LP: #1370329)
+    - Add Get-RTC-is-in-local-time-setting-from-etc-default-rc.patch: In
+      Ubuntu we currently keep the setting whether the RTC is in local or UTC
+      time in /etc/default/rcS "UTC=yes|no", instead of /etc/adjtime.
+      (LP: #1377258)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
