--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
       Ubuntu we currently keep the setting whether the RTC is in local or UTC
       time in /etc/default/rcS "UTC=yes|no", instead of /etc/adjtime.
       (LP: #1377258)
+    - Chown the "systemd" controller of user scropes to the user. This makes
+      unprivileged user LXC containers work under systemd, together with
+      libpam-cgfs. (LP: #1346734)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
