--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,8 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       compatibility with lots of packages which expect to be able to
       enable global forwarding in /proc/sys/net/ipv4/ip_forward.
       (LP: #1500992)
+    - Put session scopes into all cgroup controllers. This makes unprivileged
+      user LXC containers work under systemd. (LP: #1346734)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
