--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+systemd (228-5ubuntu1) UNRELEASED; urgency=medium
+
+  * Merge with Debian unstable. Remaining Ubuntu changes:
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
+
 systemd (228-5) unstable; urgency=medium
 
   [ Martin Pitt ]
