--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+systemd (228-3ubuntu1) UNRELEASED; urgency=medium
+
+  * Merge with Debian unstable. Remaining Ubuntu changes:
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:00:32 +0100
+
 systemd (228-3) unstable; urgency=medium
 
   [ Martin Pitt ]
