--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+systemd (229-6ubuntu1) UNRELEASED; urgency=medium
+
+  * Merge with Debian unstable. Remaining Ubuntu changes:
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 25 Apr 2016 11:52:55 +0200
+
 systemd (229-6) unstable; urgency=medium
 
   * systemd-container: Prefer renamed "btrfs-progs" package name over
