--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+systemd (229-1ubuntu1) UNRELEASED; urgency=medium
+
+  * Merge with Debian unstable. Remaining Ubuntu changes:
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
+
 systemd (229-1) unstable; urgency=medium
 
   * New upstream release 229.
