--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,11 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       really support "allow-hotplug" in Ubuntu at the moment, so we need to
       deal with "auto" devices appearing after "/etc/init.d/networking start"
       already ran. (LP: #1374521)
+    - ifup@.service: Drop dependency on networking.service (i. e.
+      /etc/init.d/networking), and merely ensure that /run/network exists.
+      This avoids unnecessary dependencies/waiting during boot and dependency
+      cycles if hooks wait for other interfaces to come up (like ifenslave
+      with bonding interfaces). (LP: #1414544)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
