--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       This particularly unbreaks cgproxy in LXC. (LP: #1491557)
     - Lower Breaks: to plymouth version which has the udev inotify fix in
       Ubuntu.
+    - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
