Upgrade fix: Migrate mountall specific fstab options to standard util-linux "nofail" option
mountall understands four fstab options which we need to migrate for
compatibility with systemd:

 bootwait: That's the systemd default anyway, so can be ignored.
 nobootwait, optional: Aliases for the standard util-linux "nofail" (why?!)
 showthrough: No corresponding option, and irrelevant

This needs to be kept until after 16.04 LTS.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
     - systemd Conflicts/Replaces/Provides systemd-services.
     - Remove obsolete systemd-logind upstart job.
     - Clean up obsolete /etc/udev/rules.d/README.
+    - systemd.postinst: Migrate mountall specific fstab options to standard
+      util-linux "nofail" option.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
