--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,7 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
     - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)
     - Don't build new systemd-journal-remote package and drop
       libmicrohttpd-dev. This is blocked by the MIR (LP #1488341).
+    - Build using libseccomp on all architectures (See Debian #800818)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
