--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,10 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       Ubuntu we currently keep the setting whether the RTC is in local or UTC
       time in /etc/default/rcS "UTC=yes|no", instead of /etc/adjtime.
       (LP: #1377258)
+    - networkd: Change IPForward= default to "kernel". This keeps
+      compatibility with lots of packages which expect to be able to
+      enable global forwarding in /proc/sys/net/ipv4/ip_forward.
+      (LP: #1500992)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
 
