--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (227-2ubuntu1) UNRELEASED; urgency=medium
+systemd (227-2ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -52,7 +52,7 @@ systemd (227-2ubuntu1) UNRELEASED; urgency=medium
       that changes to point to systemd during the upgrade. This avoids running
       systemd during a dist-upgrade. (LP: #1430479)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 08 Oct 2015 09:22:12 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 28 Oct 2015 09:46:04 +0100
 
 systemd (227-3) UNRELEASED; urgency=medium
 
