--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,7 @@ systemd (228-1ubuntu1) UNRELEASED; urgency=medium
     - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)
     - Don't build new systemd-journal-remote package and drop
       libmicrohttpd-dev. This is blocked by the MIR (LP #1488341).
+    - Build using libseccomp on powerpc and ppc64el (See Debian #800818).
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100
 
