--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ systemd (228-4ubuntu1) UNRELEASED; urgency=medium
     - Put session scopes into all cgroup controllers. This makes unprivileged
       user LXC containers work under systemd. (LP: #1346734)
     - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)
+    - Build using libseccomp on powerpc and ppc64el (See Debian #800818).
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:00:32 +0100
 
