--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-systemd (228-1ubuntu2) UNRELEASED; urgency=medium
+systemd (228-1ubuntu2) xenial; urgency=medium
 
   * Merge with Debian to fix FTBFS.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 18 Nov 2015 18:11:38 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Nov 2015 12:41:25 +0100
 
 systemd (228-3) UNRELEASED; urgency=medium
 
