--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
       that changes to point to systemd during the upgrade. This avoids running
       systemd during a dist-upgrade. (LP: #1430479)
     - Provide shutdown fallback for upstart. (LP: #1370329)
+    - Break lvm (<< 2.02.133-1ubuntu1) and remove our dummy /etc/init.d/lvm2
+      on upgrades, as it's shipped by lvm2 now.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
