--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ systemd (229-1ubuntu1) UNRELEASED; urgency=medium
     - Provide shutdown fallback for upstart. (LP: #1370329)
     - Break lvm (<< 2.02.133-1ubuntu1) and remove our dummy /etc/init.d/lvm2
       on upgrades, as it's shipped by lvm2 now.
+    - Make udev break on mdadm << 3.3-2ubuntu3, as udev's init script dropped
+      the "Provides: raid-mdadm".
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
 
