--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ systemd (228-4ubuntu1) UNRELEASED; urgency=medium
       systemd during a dist-upgrade. (LP: #1430479)
     - Break lvm (<< 2.02.133-1ubuntu1) and remove our dummy /etc/init.d/lvm2
       on upgrades, as it's shipped by lvm2 now.
+    - Make udev break on mdadm << 3.3-2ubuntu3, as udev's init script dropped
+      the "Provides: raid-mdadm". This needs to be kept until after 16.04 LTS.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:00:32 +0100
 
