--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
     - Provide shutdown fallback for upstart. (LP: #1370329)
     - Break lvm (<< 2.02.133-1ubuntu1) and remove our dummy /etc/init.d/lvm2
       on upgrades, as it's shipped by lvm2 now.
+    - Make udev break on mdadm << 3.3-2ubuntu3, as udev's init script dropped
+      the "Provides: raid-mdadm".
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
