--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (228-3ubuntu1) UNRELEASED; urgency=medium
+systemd (228-3ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -30,7 +30,7 @@ systemd (228-3ubuntu1) UNRELEASED; urgency=medium
     - Make udev break on mdadm << 3.3-2ubuntu3, as udev's init script dropped
       the "Provides: raid-mdadm". This needs to be kept until after 16.04 LTS.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:00:32 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:59:25 +0100
 
 systemd (228-3) unstable; urgency=medium
 
