--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (228-4ubuntu1) UNRELEASED; urgency=medium
+systemd (228-4ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -34,7 +34,7 @@ systemd (228-4ubuntu1) UNRELEASED; urgency=medium
     to the user. Other controllers are now being handled by libpam-cgm. Adjust
     debian/tests/user-session-cgroups accordingly.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 03 Jan 2016 12:00:32 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 14 Jan 2016 12:19:58 +0100
 
 systemd (228-5) UNRELEASED; urgency=medium
 
