--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
       the "Provides: raid-mdadm".
     - Clean up /var/log/udev on upgrade (which is written under upstart, but
       not under systemd). (LP: #1537211)
+    - Migrate existing s390x network configuration to new names. (LP: #1526808)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
