--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (228-5ubuntu1) UNRELEASED; urgency=medium
+systemd (228-5ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -33,7 +33,7 @@ systemd (228-5ubuntu1) UNRELEASED; urgency=medium
       not under systemd). (LP: #1537211)
     - Migrate existing s390x network configuration to new names. (LP: #1526808)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 03 Feb 2016 12:10:40 +0100
 
 systemd (228-5) unstable; urgency=medium
 
