--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+systemd (228-5ubuntu2) UNRELEASED; urgency=medium
+
+  * Make-run-lock-tmpfs-an-API-fs.patch: Drop /run/lock from
+    tmpfiles.d/legacy.conf to avoid the latter clobbering the permissions of
+    /run/lock. Fixes fallout from cleanup in -5 that resulted /run/lock to
+    have 0755 permissions instead of 1777. (LP: #1541775)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 04 Feb 2016 11:52:04 +0100
+
 systemd (228-5ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
