--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ systemd (229-1ubuntu1) UNRELEASED; urgency=medium
     - Clean up /var/log/udev on upgrade (which is written under upstart, but
       not under systemd). (LP: #1537211)
     - Migrate existing s390x network configuration to new names. (LP: #1526808)
+    - systemd.postinst: Bump Version comparison for migrating the UTC setting
+      from /etc/default/rcS to /etc/adjtime, to run it for upgrades to 16.04.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
 
