--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
     - Clean up /var/log/udev on upgrade (which is written under upstart, but
       not under systemd). (LP: #1537211)
     - Migrate existing s390x network configuration to new names. (LP: #1526808)
+    - systemd.postinst: Bump Version comparison for migrating the UTC setting
+      from /etc/default/rcS to /etc/adjtime, to run it for upgrades to 16.04.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
 
