--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (228-5ubuntu3) UNRELEASED; urgency=medium
+systemd (228-5ubuntu3) xenial; urgency=medium
 
   * Revert Ubuntu delta about setting UTC in /etc/default/rcS instead of
     /etc/adjtime. (LP: #1541532)
@@ -6,7 +6,7 @@ systemd (228-5ubuntu3) UNRELEASED; urgency=medium
     UTC setting from /etc/default/rcS to /etc/adjtime, to run it for upgrades
     to 16.04.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 04 Feb 2016 22:42:31 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 04 Feb 2016 23:11:39 +0100
 
 systemd (228-5ubuntu2) xenial; urgency=medium
 
