--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (228-6ubuntu1) UNRELEASED; urgency=medium
+systemd (228-6ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -26,7 +26,7 @@ systemd (228-6ubuntu1) UNRELEASED; urgency=medium
     - systemd.postinst: Bump Version comparison for migrating the UTC setting
       from /etc/default/rcS to /etc/adjtime, to run it for upgrades to 16.04.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 03 Feb 2016 13:34:43 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 00:31:51 +0100
 
 systemd (228-7) UNRELEASED; urgency=medium
 
