--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-systemd (229-1ubuntu2) UNRELEASED; urgency=medium
+systemd (229-1ubuntu2) xenial; urgency=medium
 
   * time-util: map ALARM clockids to non-ALARM clockids in now(), to work on
     architectures which don't support CLOCK_BOOTTIME_ALARM. Fixes FTBFS on
     many architectures.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 14 Feb 2016 13:18:16 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 14 Feb 2016 13:18:57 +0100
 
 systemd (229-1ubuntu1) xenial; urgency=medium
 
