--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (229-3ubuntu1) UNRELEASED; urgency=medium
+systemd (229-3ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
     - Hack to support system-image read-only /etc, and modify files in
@@ -28,7 +28,7 @@ systemd (229-3ubuntu1) UNRELEASED; urgency=medium
       upstream commit 6c1e69f9. Migrate names in ifupdown accordingly.
       (LP: #1550539)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 11 Feb 2016 21:39:13 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 21 Mar 2016 15:28:34 +0100
 
 systemd (229-3) unstable; urgency=medium
 
