--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (229-3ubuntu2) UNRELEASED; urgency=medium
+
+  * udev.postinst: Quiesce error message if /sys/class/net/eno* does not
+    exist. (LP: #1560112)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Mar 2016 08:53:32 +0100
+
 systemd (229-3ubuntu1) xenial; urgency=medium
 
   * Merge with Debian unstable. Remaining Ubuntu changes:
