--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,11 @@ systemd (229-3ubuntu2) UNRELEASED; urgency=medium
   * Fix crash when shutdown is issued from a non-tty. (LP: #1553040)
   * networkd: Stay running while any non-loopback interface is up.
     (Closes: #819414)
+  * udev: Don't kill peer processes if we don't run in a cgroup. This happens
+    when running under/upgrading from upstart. udevd and everything
+    else run in the root hierarchy on all controllers then, and the alleged
+    cleanup of "our" cgroup becomes a system-wide killing spree.
+    (LP: #1555237)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Mar 2016 08:53:32 +0100
 
