debian/extra/rules/73-usb-net-by-mac.rules: Disable when /etc/udev/rules.d/80-net-setup-link.rules is a symlink to /dev/null
To be consistent with the documented way to disable ifnames.

Closes: #824491
LP: #1593379

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,9 @@ systemd (229-4ubuntu7) UNRELEASED; urgency=medium
   * Split out udev rule to name USB network interfaces by MAC address into
     73-usb-net-by-mac.rules, so that it's easier to disable. (Closes: #824025)
   * 73-usb-net-by-mac.rules: Disable when net.ifnames=0 is specified on the
-    kernel command line, to be consistent with disabling the *.link files.
+    kernel command line or if /etc/udev/rules.d/80-net-setup-link.rules is a
+    symlink to /dev/null, to be consistent with disabling the *.link files and
+    the documented way to disable ifnames. (Closes: #824491, LP: #1593379)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 05 Jun 2016 21:46:07 +0200
 
